objects/Campaign.object
<CustomObject>
    <fields>
        <fullName>AllowRegistrationTypes__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If checked, users can select Registration Type on the campaign member; otherwise they are not allowed to select Registration Type</inlineHelpText>
        <label>Allow Registration Types</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Audience__c</fullName>
        <label>Audience</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CventCampaign__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cvent Campaign</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EnforceRegistrationTypes__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If checked, users must select a Registration Type on the campaign member; otherwise they can save without selecting a Registration Type</inlineHelpText>
        <label>Enforce Registration Types</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LegalFaxlineEmail__c</fullName>
        <label>Legal Faxline Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>OODRowId__c</fullName>
        <externalId>true</externalId>
        <label>OODRowId</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Objective__c</fullName>
        <label>Objective</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Offer__c</fullName>
        <label>Offer</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>RunCampaignSharing__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, campaign sharing will execute.  After campaign sharing has run, the checkbox is set to false.</description>
        <label>Run Campaign Sharing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SIREmailAddress__c</fullName>
        <label>SIR Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Synergy_Row_ID__c</fullName>
        <description>Used to map loaded Static Lists</description>
        <externalId>true</externalId>
        <label>Synergy Row ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Touch__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is a work field to make some process builders work.  There is no functionality associated with this field.</description>
        <label>Touch</label>
        <type>Checkbox</type>
    </fields>
    <sharingModel>Private</sharingModel>
    <listViews>
        <fullName>AllActiveStaticListCampaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.NUM_CONTACTS</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>CAMPAIGN.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Campaign.StaticList</value>
        </filters>
        <label>All Active Static List Campaigns</label>
        <sharedTo>
            <role>a02F000000DHHoGIAX</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Active_Aprimo_Static_List_Campaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.NUM_CONTACTS</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Campaign.StaticList</value>
        </filters>
        <label>All Active Aprimo Static List Campaigns</label>
        <sharedTo>
            <group>SFDC_Admins</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CVent_Campaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.BUDGETED_COST</columns>
        <columns>CAMPAIGN.ACTUAL_COST</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.NAME</field>
            <operation>notEqual</operation>
            <value>CVent Campaign Template</value>
        </filters>
        <filters>
            <field>CventCampaign__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>CVent Campaigns</label>
    </listViews>
    <listViews>
        <fullName>Campaigns_in_Progress</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>Objective__c</columns>
        <columns>CAMPAIGN.NUM_CONTACTS</columns>
        <columns>CAMPAIGN.NUM_RESPONSES</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.STATUS</field>
            <operation>equals</operation>
            <value>In Progress</value>
        </filters>
        <filters>
            <field>CAMPAIGN.CAMPAIGN_TYPE</field>
            <operation>equals</operation>
            <value>Call Campaign</value>
        </filters>
        <label>Call Campaigns in Progress</label>
    </listViews>
    <listViews>
        <fullName>Digital_Selling_Campaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.BUDGETED_COST</columns>
        <columns>CAMPAIGN.ACTUAL_COST</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.CAMPAIGN_TYPE</field>
            <operation>equals</operation>
            <value>Digital Selling,Digital Selling Conference,Digital Selling Territory-Specific</value>
        </filters>
        <label>Digital Selling Campaigns</label>
    </listViews>
    <listViews>
        <fullName>Event_Campaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CventCampaign__c</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.BUDGETED_COST</columns>
        <columns>CAMPAIGN.ACTUAL_COST</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.NAME</field>
            <operation>notEqual</operation>
            <value>CVent Campaign Template</value>
        </filters>
        <filters>
            <field>CAMPAIGN.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Campaign.Event</value>
        </filters>
        <label>Event Campaigns</label>
    </listViews>
    <listViews>
        <fullName>MyActiveCampaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.NUM_CONTACTS</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CAMPAIGN.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Active Campaigns</label>
    </listViews>
    <listViews>
        <fullName>MyActiveStaticListCampaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.NUM_CONTACTS</columns>
        <columns>Objective__c</columns>
        <columns>CAMPAIGN.CREATED_DATE</columns>
        <columns>CAMPAIGN.ACTIVE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CAMPAIGN.NAME</field>
            <operation>contains</operation>
            <value>2016</value>
        </filters>
        <label>My Active Static List Campaigns</label>
    </listViews>
    <listViews>
        <fullName>Personal_Campaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>CAMPAIGN.NUM_CONTACTS</columns>
        <columns>Objective__c</columns>
        <columns>CAMPAIGN.ACTIVE</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CAMPAIGN.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CAMPAIGN.CAMPAIGN_TYPE</field>
            <operation>equals</operation>
            <value>Personal Campaign</value>
        </filters>
        <label>My Personal Call Campaigns</label>
    </listViews>
    <listViews>
        <fullName>Sales_Manager_Campaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>CAMPAIGN.NUM_CONTACTS</columns>
        <columns>Objective__c</columns>
        <columns>CAMPAIGN.ACTIVE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CAMPAIGN.CAMPAIGN_TYPE</field>
            <operation>equals</operation>
            <value>Sales Manager Campaign</value>
        </filters>
        <label>Sales Manager Campaigns</label>
    </listViews>
    <recordTypes>
        <fullName>CallCampaign</fullName>
        <active>true</active>
        <label>Call Campaign</label>
    </recordTypes>
    <recordTypes>
        <fullName>Event</fullName>
        <active>true</active>
        <description>Use this for cVent events</description>
        <label>Event</label>
    </recordTypes>
    <recordTypes>
        <fullName>PardotCampaign</fullName>
        <active>true</active>
        <label>Pardot Campaign</label>
    </recordTypes>
    <recordTypes>
        <fullName>StaticList</fullName>
        <active>true</active>
        <label>Static List</label>
    </recordTypes>
    <validationRules>
        <fullName>Sales_Manager_Campaign_Type_Update</fullName>
        <active>true</active>
        <description>Ensures that only sales managers can create a call campaign and assign a type value of 'Sales Manager Campaign'. The current user must have the 'VIP' field checked on the user object. This field is used to identify sales managers.</description>
        <errorConditionFormula>AND( 
$User.VIP__c  = FALSE, 
ISPICKVAL( Type , "Sales Manager Campaign" ))</errorConditionFormula>
        <errorDisplayField>Type</errorDisplayField>
        <errorMessage>Only sales managers can create a campaign with a 'Sales Manager Campaign' type. Please select the 'Personal Campaign' type.</errorMessage>
    </validationRules>
</CustomObject>